# python-projects

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh  template.yml
.github/workflows/: main.yml  rename_project.yml
python_projects/: __main__.py  base.py
python_projects_name/: cli.py
tests/: test_base.py
