[tool.poetry]
name = "python-projects"
version = "0.1.0"
description = ""
authors = ["Andrew Freebairn <andrew.freebairn@csiro.au>"]
readme = "README.md"
packages = [{include = "python_projects"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
pytest-github-actions-annotate-failures = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
